@@ -256,6 +256,18 @@
           <h3>Already baked development packages</h3>
 
             <div class="download">
+              <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.23/cheese-2.23.6.tar.gz"
+                title="Source code of the latest stable release">
+                <img src="data/images/package-x-generic.png" alt="source package" />
+                Cheese 2.23.6
+              </a>
+              <p>
+              released on August 5th 2008<br />
+              md5sums: 2bdbac73205513f36e91d8a589655d95
+              </p>
+            </div>
+
+            <div class="download">
               <a href="http://ftp.gnome.org/pub/GNOME/sources/cheese/2.23/cheese-2.23.5.tar.gz"
                 title="Source code of the latest stable release">
                 <img src="data/images/package-x-generic.png" alt="source package" />
