@@ -136,6 +136,20 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>August 5th 2008</h3>
+          <p>
+          Unstable verson 2.23.6 was released!
+          New features since previous version include:
+          </p>
+          <ul>
+            <li>add a fullscreen mode for kiosks</li>
+            <li>display a loading icon while generating thumbnail and a fallback icon if thumbnail fails</li>
+            <li>resolve sluggish video and out-of-sync audio</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download.html">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-August/msg00021.html">full release notes</a>)
+
           <h3>July 21st 2008</h3>
           <p>
           Unstable verson 2.23.5 was released!
