@@ -1,3 +1,9 @@
+2008-08-05  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  populate the cheese 2.23.6 release
+
 2008-08-03  Vincent Untz  <vuntz@gnome.org>
 
 	* www.gnome.org/index.wml: add Boston Summit to the upcoming events
